--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,8 @@
-*{
-	box-sizing: border-box;
-	font-family: "Times New Roman";
-}
-
-nav {
-    padding-top: 1%;
-    text-align: center;
-}
-
-a{
-	text-decoration: none;
-	padding-left: 3%;
-    padding-right: 3%;
-    color: #000000;
-    font-weight: bold;
-}
-
-.container_12{
-	background-image: url(../images/background.jpg);
-	width: 100%;
-	height: 540px;
-	margin-top: 1%;
-}
-
-h1, h2{
-	text-align: center;
-	color: #fff;
-	margin-top: -8px;
-}
-
-h1{
-	font-size: 50px;
-}
-
-h2{
-	font-size: 36px;
-}
-#logo{
-	margin-left: 47%;
-	margin-top: 8%;
+.banner{
+	background-image: url("../images/background.jpg");
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 550px;
+    margin: auto;
+    
 }
