--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,99 @@
+header{
+	height: 100px;
+	text-align: center;
+	padding-top: 20px;
+	box-sizing: border-box;
+}
+
+a{
+	text-decoration: none;
+	color: black;
+}
+
+header .container-fluid .row .col-12 a{
+	margin: 0 80px 0 80px;
+}
+
 .banner{
-	background-image: url("../images/background.jpg");
-    background-repeat: no-repeat;
-    width: 100%;
-    height: 550px;
-    margin: auto;
-    
+	background-image: url(../images/background.jpg);
+	width: 100%;
+	height: 540px;
+	padding: 150px 0px 0px 100px;
+    box-sizing: border-box;
+    color: white;
+}
+
+.banner div{
+	margin-top: -55px;
+	text-align: center;
+	margin-left: -12%;
+}
+
+#logo{
+	width: 5%;
+	padding-left: 1%;
+}
+
+#titulo{
+	font-size: 70px;
+}
+
+#subtitulo{
+	font-size: 40px;
+}
+
+.fondo1{
+	background-image: url(../images/tile1.png);
+}
+
+#profile{
+	width: 165px;
+	border: 1px solid black;
+	padding: 5px;
+	height: 228px;
+	margin-bottom: 20%;
+}
+
+.articulo{
+	padding: 50px 0 30px 0;
+	font-size: 30px;
+	text-align: center;
+}
+
+h3{
+	color: #A901DB;
+}
+
+.aside{
+	padding: 0 0 30px 0;
+	font-size: 25px;
+	text-align: center;
+	color: #A901DB;
+}
+
+.circlecat{
+	border-radius: 50%;
+	width: 50%;
+	height: 50%;
+	padding: 1%;
+	border: 2px solid #A901DB;
+	margin-bottom: 20%; 
+}
+
+.fondo-footer{
+	background-image: url(../images/tile2.png);
+	width: 100%;
+	height: 380px;
+    box-sizing: border-box;
+}
+
+.titulo_pie{
+	padding: 5% 0 5% 0;
+	text-align: center;
+	font-size: 30px;
+}
+
+.imagen_pie{
+	width: 30%;
+	height: 30%;
 }
